# mSFML

./: CMakeLists.txt  main.cpp  makebuild
include/: AnimatedSprite.hpp  IAudio.hpp  IGui.hpp  TextureManager.hpp  Timer.hpp  mSFML.hpp  mSFML_Audio.hpp  mSFML_Window.hpp
srcs/: AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  Audio.cpp  Audio.hpp  IAudio.hpp  IGui.hpp  TextureManager.cpp  TextureManager.hpp  Timer.cpp  Window.cpp  Window.hpp  mSFML_Audio.cpp  mSFML_Window.cpp
